--- a/Resources/Private/Templates/Be/Translator/Detail.html
+++ b/Resources/Private/Templates/Be/Translator/Detail.html
@@ -7,6 +7,112 @@
 <f:layout name="Default" />
 
 <f:section name="headline">
+    <f:asset.script identifier="translator-export-row">
+        <f:format.raw>
+            let save = document.querySelector('a[data-action=save]')
+        if (save){
+            save.addEventListener('click', (event) => {
+							saveAction()
+
+							event.stopPropagation();
+            })
+        }
+
+				document.getElementById('translation-form').addEventListener('submit', (event) => {
+					saveAction()
+					event.stopPropagation();
+				})
+
+				const saveAction = () => {
+        	const fromElement = document.getElementById('translation-form');
+					const formData = new FormData(fromElement);
+					let data = {};
+					formData.forEach((value, key) => (data[key] = value));
+					data = JSON.stringify(data);
+					fetch(fromElement.getAttribute('action'), {
+						method: 'POST',
+						body: data
+						,
+					}).then(function (response) {
+						if (response.ok) {
+							return response.json();
+						}
+						return Promise.reject(response);
+					}).then(function (data) {
+						if (data.success) {
+                            top.TYPO3.Notification.success(
+                            '</f:format.raw><f:translate key="flashMessages.sucecssfullySaved" /><f:format.raw>'
+                            );
+						} else {
+                            top.TYPO3.Notification.error(
+                            '</f:format.raw><f:translate key="flashMessages.notSucecssfullySaved" /><f:format.raw>'
+                            );
+                        }
+					}).catch(function (error) {
+						console.warn(error);
+                        top.TYPO3.Notification.error(
+                        '</f:format.raw><f:translate key="flashMessages.notSucecssfullySaved" /><f:format.raw>'
+                        );
+					});
+				}
+
+
+        [].slice.call(document.querySelectorAll('.popup-action button')).forEach((button) => {
+            button.addEventListener('click', (event) => {
+                let content = button.parentNode.querySelector('.popup-content');
+                if (content.classList.contains('hidden')) {
+                    content.classList.remove('hidden')
+                } else {
+                    content.classList.add('hidden');
+                }
+            })
+        })
+
+        let search = document.querySelector('#hd_translator-search');
+        let dataItems = document.querySelectorAll('.hd-translator-detail-grid-item')
+
+        const searchAction = (event) => {
+            let searchStrings = search.value.toLowerCase().trim().split(' ');
+            if (search.value.length > 2 && searchStrings.length > 0) {
+                dataItems.forEach((item) => {
+                    let allFound = true;
+                    let dataSearchString = item.getAttribute('data-search');
+
+                    searchStrings.forEach((subsearch) => {
+                        let subsearchCleanString = subsearch.trim();
+
+                        if (subsearchCleanString.length > 1) {
+                            if (!dataSearchString.includes(subsearchCleanString)) {
+                                allFound = false;
+                            }
+                        }
+                    })
+
+                    if (!allFound) {
+                        if (!item.classList.contains('hidden')) {
+                            item.classList.add('hidden');
+                        }
+                    } else {
+                        if (item.classList.contains('hidden')) {
+                            item.classList.remove('hidden')
+                        }
+                    }
+                })
+            } else {
+                dataItems.forEach((item) => {
+                    if (item.classList.contains('hidden')) {
+                        item.classList.remove('hidden')
+                    }
+                })
+            }
+        }
+
+        if (search && dataItems) {
+            search.addEventListener('keyup', searchAction );
+            search.addEventListener('change', searchAction );
+        }
+        </f:format.raw>
+    </f:asset.script>
 </f:section>
 
 <f:section name="content">
@@ -28,35 +134,27 @@
                         </div>
                         <div class="toolbar-button-section">
                             <div class="popup-action">
-                                <button>
-                                    <f:link.action action="remove" arguments="{keyTranslation: translationKey, languageTranslation: langaugeKey}">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-                                        </svg>
-                                        <f:translate key="detail.remove" />
-                                    </f:link.action>
-                                </button>
+                                <f:link.action class="btn btn-default" action="remove" arguments="{keyTranslation: translationKey, languageTranslation: langaugeKey}">
+                                    <core:icon identifier="actions-delete" size="small" />
+                                    <f:translate key="detail.remove" />
+                                </f:link.action>
                             </div>
                             <div class="popup-action">
-                                <button>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12" />
-                                    </svg>
+                                <button class="btn btn-default">
+                                    <core:icon identifier="actions-extension-import" size="small" />
                                     <f:translate key="detail.import" />
                                 </button>
                                 <div class="popup-content hidden download-links">
                                     <f:form action="import" enctype="multipart/form-data" arguments="{keyTranslation: translationKey, languageTranslation: langaugeKey}" method="post">
                                         TODO: Allowed: xlf, xls, csv, json
-                                        <f:form.upload name="file" />
+                                        <f:form.upload name="data[file]" />
                                         <f:form.submit value="TODO: upload" />
                                     </f:form>
                                 </div>
                             </div>
                             <div class="popup-action">
-                                <button>
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
-                                    </svg>
+                                <button class="btn btn-default">
+                                    <core:icon identifier="actions-download" size="small" />
                                     <f:translate key="detail.download" />
                                 </button>
                                 <div class="popup-content hidden download-links">
@@ -115,104 +213,7 @@
         </f:if>
     </div>
     <script>
-        let save = document.querySelector('a[data-action=save]')
-        if (save){
-            save.addEventListener('click', (event) => {
-							saveAction()
 
-							event.stopPropagation();
-            })
-        }
-
-				document.getElementById('translation-form').addEventListener('submit', (event) => {
-					saveAction()
-					event.stopPropagation();
-				})
-
-				const saveAction = () => {
-        	const fromElement = document.getElementById('translation-form');
-					const formData = new FormData(fromElement);
-					let data = {};
-					formData.forEach((value, key) => (data[key] = value));
-					data = JSON.stringify(data);
-					fetch(fromElement.getAttribute('action'), {
-						method: 'POST',
-						body: data
-						,
-					}).then(function (response) {
-						if (response.ok) {
-							return response.json();
-						}
-						return Promise.reject(response);
-					}).then(function (data) {
-						if (data.success) {
-							document.getElementById('translation-form-success').style.display = 'block';
-							setTimeout(() => {
-								document.getElementById('translation-form-success').style.display = 'none';
-							}, 2000)
-						}
-					}).catch(function (error) {
-						console.warn(error);
-					});
-				}
-
-        let popups = document.querySelectorAll('.popup-action');
-        if (popups){
-            popups.forEach(function(element){
-                element.querySelector('button').addEventListener('click', (event) => {
-                    let content = element.querySelector('.popup-content');
-                    if (content.classList.contains('hidden')) {
-                        content.classList.remove('hidden')
-                    } else {
-                        content.classList.add('hidden');
-                    }
-                })
-            })
-        }
-
-        let search = document.querySelector('#hd_translator-search');
-        let dataItems = document.querySelectorAll('.hd-translator-detail-grid-item')
-
-        const searchAction = (event) => {
-            let searchStrings = search.value.toLowerCase().trim().split(' ');
-            if (search.value.length > 2 && searchStrings.length > 0) {
-                dataItems.forEach((item) => {
-                    let allFound = true;
-                    let dataSearchString = item.getAttribute('data-search');
-
-                    searchStrings.forEach((subsearch) => {
-                        let subsearchCleanString = subsearch.trim();
-
-                        if (subsearchCleanString.length > 1) {
-                            if (!dataSearchString.includes(subsearchCleanString)) {
-                                allFound = false;
-                            }
-                        }
-                    })
-
-                    if (!allFound) {
-                        if (!item.classList.contains('hidden')) {
-                            item.classList.add('hidden');
-                        }
-                    } else {
-                        if (item.classList.contains('hidden')) {
-                            item.classList.remove('hidden')
-                        }
-                    }
-                })
-            } else {
-                dataItems.forEach((item) => {
-                    if (item.classList.contains('hidden')) {
-                        item.classList.remove('hidden')
-                    }
-                })
-            }
-        }
-
-        if (search && dataItems) {
-            search.addEventListener('keyup', searchAction );
-            search.addEventListener('change', searchAction );
-        }
     </script>
 </f:section>
 
