--- a/Resources/Private/Templates/Be/Translator/Index.html
+++ b/Resources/Private/Templates/Be/Translator/Index.html
@@ -1,25 +1,38 @@
-<div class="hd-translator">
+<html
+        xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+        xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+        xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+        data-namespace-typo3-fluid="true">
+<div>
     <f:if condition="{emptyStorage}">
         <f:then>
-            First configure the storage.
+            <f:render section="setupStorage" />
         </f:then>
         <f:else>
+            <h1><f:translate key="LLL:EXT:hd_translator/Resources/Private/Language/locallang.xlf:index.headline" /></h1>
             <f:if condition="{pageData}">
                 <h2>Translate for page <b>{pageData.title}</b> and subpages</h2>
             </f:if>
             <f:if condition="{categories}">
                 <f:then>
+                    <h2><f:translate key="LLL:EXT:hd_translator/Resources/Private/Language/locallang.xlf:index.categories.headline" /></h2>
                     <f:if condition="{enabledSync}">
-                        <f:link.action action="syncLocallangs">TODO:Run sync</f:link.action>
+                        <f:link.action action="syncLocallangs" class="btn btn-default">TODO:Run sync</f:link.action>
                     </f:if>
                     <f:render partial="Search" arguments="{_all}" />
-                    <f:for each="{categories}" as="languages" key="category">
-                        <div><f:link.action action="list" arguments="{category: category}">{category}</f:link.action></div>
-                    </f:for>
+                    <div>
+                        <table class="table table-hover">
+                            <tbody>
+                                <f:for each="{categories}" as="languages" key="category">
+                                    <tr><td><f:link.action action="list" arguments="{category: category}">{category}</f:link.action></td></tr>
+                                </f:for>
+                            </tbody>
+                        </table>
+                    </div>
                 </f:then>
                 <f:else>
                     <f:if condition="{enabledSync}">
-                        <f:link.action action="syncLocallangs">TODO:Run sync</f:link.action>
+                        <f:link.action action="syncLocallangs" class="btn btn-default">TODO:Run sync</f:link.action>
                     </f:if>
 
                     <h3>No translation enabled to be translated.</h3>
@@ -38,3 +51,14 @@
         </f:else>
     </f:if>
 </div>
+<f:section name="setupStorage">
+    <h1><f:translate key="LLL:EXT:hd_translator/Resources/Private/Language/locallang.xlf:index.missingStorage.headline" /></h1>
+    <p><f:translate key="LLL:EXT:hd_translator/Resources/Private/Language/locallang.xlf:index.missingStorage.description" /></p>
+    <p>
+        <f:be.link route="tools_toolssettings" class="btn btn-default"><core:icon identifier="actions-arrow-right" size="small" /><f:translate key="LLL:EXT:hd_translator/Resources/Private/Language/locallang.xlf:index.missingStorage.goToSettings" /></f:be.link>
+    </p>
+    <div class="ce__gallery card container-sm">
+        <f:image src="EXT:hd_translator/Resources/Public/Images/SetupStoragePath.png" maxHeight="350" />
+    </div>
+</f:section>
+</html>
