Integrated menu translation

--- a/Resources/Private/Templates/Be/Translator/DatabaseImportIndex.html
+++ b/Resources/Private/Templates/Be/Translator/DatabaseImportIndex.html
@@ -46,7 +46,7 @@
 </f:asset.script>
 
 <div>
-    <h2>Import</h2>
+    <h2><f:translate key="databaseImport.index.importHeadline" /></h2>
     <f:form action="databaseImport" enctype="multipart/form-data" id="translator-import">
 			<div class="row row-cols-auto align-items-end g-3">
 				<div class="col">
