--- a/Resources/Private/Templates/Be/Translator/Detail.html
+++ b/Resources/Private/Templates/Be/Translator/Detail.html
@@ -174,6 +174,8 @@
                             </div>
                         </div>
                     </div>
+
+										<h1>[{langaugeKey -> f:format.case(mode: 'upper')}]<f:if condition="{category}"> {category}</f:if></h1>
                     <f:if condition="{pageData}">
                         <h2>Translate for page <b>{pageData.title}</b> and subpages</h2>
                     </f:if>
