--- a/Resources/Private/Templates/Be/Translator/PageContentExport.html
+++ b/Resources/Private/Templates/Be/Translator/PageContentExport.html
@@ -30,7 +30,7 @@
 						<div class="col">
 							<label for="source" class="form-label">Source from language UID</label>
 							<div class="input-group">
-								<f:form.textfield name="source" class="form-control" id="source" value="0" />
+								<f:form.textfield name="source" class="form-control" id="source" value="{currentLanguageUid}" />
 							</div>
 						</div>
 						<div class="col">
